cmake_minimum_required(VERSION 3.17)
project(C C)

set(CMAKE_C_STANDARD 99)

add_executable(C
        #main.c
        #helloworld.c
        #reverseArray.c
        #check_num.c
        #compressAlphabet.c
        #remove_repeat.c
        #maze.c
        #palindrome.c
        #circular_queue_8.c
        #stack_to_queue.c
        fibonacci.c)
