cmake_minimum_required(VERSION 3.17)
project(C C)

set(CMAKE_C_STANDARD 99)

add_executable(C
        #main.c
        #helloworld.c
        #reverseArray.c
        #check_num.c
        #compressAlphabet.c
        #remove_repeat.c
        #maze.c
        #palindrome.c
        #circular_queue_8.c
        #stack_to_queue.c
        #fibonacci.c
        #palindrome_dequeue.c
        #test_No2.c
        #test_No3.c
        #test_No4.c
        #chapter6_9.c
        #chapter6_10.c
        #chapter6_11.c
        #chapter6_14.c
        #chapter6_16.c
        #chapter6_18.c
        #chapter6_20.c
        #chapter6_22.c
        #chapter7_1.c
        #chapter7_2.c
        #chapter7_3.c
        #chapter7_exam_3.c
        #chapter7_0.c
        #chapter7_exam_6.c
        #system_programming/macro1.c
        #chap8_1.c
        #chap8_2.c
        #chap8_4.c
        #chap8_3.c
        #chap8_5.c
        #mips/stack.c
        #chap9_11.c
        #chap9_14.c
        #chap9_15.c
        #chap9_16.c
        #DS/chap9/heap1.c
        #DS/chap9/huffman.c
        #DS/chap10/adj_mat.c
        #DS/chap10/adj_list.c
        #DS/chap10/dfs_adj_mat.c
        #DS/chap10/dfs_adj_list.c
        #DS/chap10/bfs_adj_mat.c
        #DS/chap10/bfs_adj_list.c
        #DS/chap10/adj_mat2.c
        #DS/chap10/adj_list2.c
        #DS/chap10/adj_mat3.c
        #DS/chap10/adj_mat4.c
        #DS/chap11/kruskal1.c
        #DS/chap11/prim1.c
        #DS/chap11/dijkstra1.c
        #DS/chap11/floyd1.c
        #DS/chap11/floyd2.c
        #DS/chap11/dijkstra2.c
        #DS/chap11/topological1.c
        #DS/finalTest/simple_LinkedList1.c
        #DS/finalTest/simple_LinkedList_poly.c
        #DS/finalTest/circle_LinkedList1.c
        #DS/finalTest/double_LinkedList.c
        #DS/finalTest/LinkedList_Stack.c
        #DS/finalTest/LinkedList_Queue.c
        #DS/finalTest/BinaryTree1.c
        #DS/finalTest/BinarySearchTree.c
        #DS/finalTest/BinaryTree_traversal.c
        #DS/finalTest/BinaryTree_levelorder.c
        #DS/finalTest/BinaryTree_evaluate.c
        #DS/chap11/topo_sort.c
        #DS/chap9/heap2.c
        DS/real_final/no1.c
        #DS/real_final/no2.c
        #DS/real_final/no3.c
        #DS/real_final/no4.c
        #DS/real_final/no5.c
        )